# agentic-ai

./: .gitignore  README.md  pyproject.toml
adk_research_agent/.adk/: session.db
adk_research_agent/docs/: README.md  day-01-adk-quickstart.md
examples/text2text/: config.py  main.py  pyproject.toml  text_gen_multimodal.py  text_gen_multiturn.py  text_gen_streaming.py  text_gen_sys.py  text_gen_thinking.py  text_generation.py
examples/thinking/: README.md  basic_thinking.py  config.py  main.py  pyproject.toml  thinking_budget.py  thought_summaries.py
live-api/: .env.example  .gitignore  LAPTOP_ACCESS.md  README.md  __init__.py  pyproject.toml
live-api/client/: README.md  app.js  index.html  style.css
live-api/core/: __init__.py  audio_handler.py  session_manager.py
live-api/docs/: CONCEPTS.md
live-api/examples/: basic_audio_demo.py  session_management_demo.py  text_only_demo.py  tool_calling_demo.py
live-api/observability/: __init__.py  laminar_tracer.py
live-api/server/: server.py  websocket_proxy.py
live-api/tests/: conftest.py
live-api/tests/unit/: test_laminar_tracer.py  test_session_manager.py  test_tool_executor.py
live-api/tools/: __init__.py  datetime_tool.py  search_tool.py  tool_executor.py  weather_tool.py
research-agent/: .gitignore  README.md  main.py  pyproject.toml  tools.py
scholarship_navigator/: README.md  app.py  requirements.txt
scholarship_navigator/Docs/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md  phase9.md
t2t-bot/: README.md  main.py  pyproject.toml  tools.py
(+43 files in other folders)
