[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "botocore>=1.43.17",
    "google-adk>=2.1.0",
    "google-genai>=1.52.0",
    "googlesearch-python>=1.3.0",
    "litellm>=1.75.5",
    "pillow>=12.0.0",
]

[tool.uv.workspace]
members = [
    "examples/text2text",
    "examples/thinking",
    "t2t-bot",
    "research-agent",
    "live-api",
]
